<resources>
    <string name="app_name">ATM</string>
    <string name="home_app_full_title_txt">(Android Test Manager)</string>
    <string name="home_start_btn">START</string>
    <string name="home_performance_btn">CPU/Memory 측정</string>
    <string name="home_logcat_btn">로그캣</string>
    <string name="home_app_manager_btn">앱 관리</string>
    <string name="home_setting_btn">설정</string>
    <string name="home_help_btn">도움말</string>
    <string name="home_by_made_txt">by NT3</string>
    <string name="wheel_view_item1">캡쳐</string>
    <string name="wheel_view_item2">녹화</string>
    <string name="wheel_view_item3">메모</string>
    <string name="wheel_view_item4">로그캣</string>
    <string name="wheel_view_item5">앱관리</string>
    <string name="wheel_view_item6">홈</string>
    <string name="wheel_view_item7">매크로</string>
    <string name="wheel_view_item8">성능 측정</string>
    <string name="wheel_view_item9">숨기기</string>
    <string name="edit_capture_title_txt">캡쳐</string>
    <string name="edit_capture_send_btn_txt">전송</string>
    <string name="setting_activity_title_txt">설정</string>
    <string name="setting_activity_user_email_title">계정</string>
    <string name="setting_activity_user_email_subtext">탭해서 메일을 등록하면 캡쳐, 녹화, Logcat 데이터를 받을 수 있습니다.</string>
    <string name="setting_activity_alarm_title">알림</string>
    <string name="setting_activity_alarm_ndeploy">Ndeploy에서 최신 빌드가 업로드되면 알림을 받습니다.</string>
    <string name="setting_activity_alarm_crash">Crash 발생 시 알림 및 메일을 받습니다.</string>
    <string name="setting_activity_alarm_subtext">등록된 메일이 있는 경우 자동으로 메일 전송이 됩니다\n만약 없는 경우에는 ATM폴더에 저장됩니다.</string>
    <string name="setting_activity_record_state_title">녹화</string>
    <string name="setting_activity_record_state_txt">녹화 화질 상태</string>
    <string name="setting_activity_capture_title_txt">캡쳐</string>
    <string name="setting_activity_send_capture_without_edit_txt">편집작업 없이 바로 저장 및 메일로 전송합니다.</string>
    <string name="insert_email_dialog_title">메일 입력</string>
    <string name="insert_email_dialog_subtext">캡쳐, 녹화, Logcat 파일을 받고자 하는 메일을 입력해주세요.</string>
    <string name="not_exist_info_txt">정보를 입력해주세요.</string>
    <string name="not_email_format_txt">올바른 이메일 형식이 아닙니다.</string>
    <string name="for_lollipop_txt">Lollipop(5.0)이상만 가능합니다.</string>
    <string name="ndeploy_alarm_push_title">최신 빌드</string>
    <string name="ndeploy_alarm_push_txt1">최신 빌드가 업로드 되었습니다</string>
    <string name="ndeploy_alarm_push_txt2">최신 빌드 확인하러가기</string>
    <string name="ndeploy_alarm_running_txt1">Ndeploy 최신 빌드 확인중</string>
    <string name="ndeploy_alarm_running_txt2">최신 빌드 업로드 확인중</string>
    <string name="ndeploy_alarm_dialog_title">Ndeploy URL</string>
    <string name="ndeploy_alarm_dialog_txt">Ndeploy URL을 입력해주세요.</string>
    <string name="logcat_main_title">LogCat</string>
    <string name="logcat_setting_dialog_btn1">검색</string>
    <string name="logcat_setting_dialog_btn2">초기화</string>
    <string name="logcat_setting_dialog_btn3">저장</string>
    <string name="logcat_setting_dialog_btn4">설정</string>
    <string name="logcat_setting_dialog_btn5">오버레이</string>
    <string name="filter_menu">필터 (%s)</string>
    <string name="filter_menu_empty">필터</string>
    <string name="saving_log">로그를 저장합니다: %s, 기다려주세요</string>
    <string name="sel_level">로그 레벨 선택</string>
    <string name="sel_type">로그 타입 선택</string>
    <string name="sel_format">로그 포맷 선택</string>
    <string name="sum_level">로그의 레벨을 선택합니다.</string>
    <string name="sum_format">로그의 포맷을 선택합니다.</string>
    <string name="sum_type">로그의 타입을 선택합니다.</string>
    <string name="log_prefs_title">Log Display</string>
    <string name="filter_dialog_text">로그를 필터링 할 문자열을 적어주세요.</string>
    <string name="pattern_error_text">알 수 없는 정규식입니다.</string>
    <string name="apply_as_regexp">정규식을 적용할까요?</string>
    <string name="timer_saving_info">일정 시간동안 로그를 저장하시려면 초 단위의 시간을 입력해 주세요.</string>
    <string name="timer_error_text">저장 시간을 다시 확인해 주세요.</string>
    <string name="screen_record_title_txt">녹화</string>
    <string name="screen_record_state_high_txt">고화질</string>
    <string name="screen_record_state_mid_txt">중화질</string>
    <string name="screen_record_state_low_txt">저화질</string>
    <string name="screen_record_start_txt">녹화 시작</string>
    <string name="screed_record_stop_txt">녹화 중지</string>
    <string name="apk_manager_activity_title_txt">앱관리</string>
    <string name="apk_manager_activity_download_btn_txt">다운로드 링크</string>
    <string name="apk_manager_activity_download_empty_txt">등록된 Ndeploy 최신버전 링크가 없습니다.</string>
    <string name="apk_manager_activity_setting_btn_txt">설정</string>
    <string name="write_download_link_activity_title">링크 작성</string>
    <string name="write_activity_save_btn">저장</string>
    <string name="write_download_link_activity_title_hint">제목</string>
    <string name="write_download_link_activity_url_hint">다운로드 링크를 입력해주세요.</string>
    <string name="write_memo_activity_title">메모 작성</string>
    <string name="write_memo_activity_title_hint">제목</string>
    <string name="write_memo_activity_content_hint">내용</string>
    <string name="write_edit_activity_title">수정</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_apk_list">AppList Demo</string>
    <string name="appicon">Application Icon</string>
    <string name="apkname">Application Name:</string>
    <string name="package_name">Package Name:</string>
    <string name="current_version">Current_Version:</string>
    <string name="market_version">Market_Version:</string>
    <string name="features">Required Features:</string>
    <string name="permissions">Required Permissions:</string>
    <string name="req_version">Taget SDK Version:</string>
    <string name="path_info">Path Info:</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed:</string>
    <string name="modified">Last Modified:</string>
    <string name="memo_activity_title_txt">메모</string>
    <string name="memo_activity_empty_txt">등록된 메모가 없습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="performance_activity_title">측정</string>
    <string name="performance_activity_on">측정하기</string>
    <string name="performance_activity_off">중지</string>
    <string name="processes_activity_title">Processes</string>
    <string name="performance_activity_back_dialog_title">종료</string>
    <string name="performance_activity_back_dialog_contents">측정을 종료하시겠습니까? \n측정을 종료하지 않으면 측정이 계속 유지됩니다.</string>
    <string name="anim_time">100</string>
    <string name="notify_read">ATM is reading values</string>
    <string name="notify_read2">CPU/MEMORY 측정 중</string>
    <string name="notify_record">ATM is recording values</string>
    <string name="notify_record2">Recording values in the background</string>
    <string name="notify_toast_saved">saved in the folder \'ATM\'.</string>
    <string name="notify_toast_error">An error happened when saving the CSV file:</string>
    <string name="notify_toast_error_2">It hasn\'t been possible to start recording:</string>
    <string name="w_main_choose_process">Choose other process(es)</string>
    <string name="w_main_processes">Processes</string>
    <string name="w_main_memory">Memory</string>
    <string name="w_main_hide">Hide</string>
    <string name="w_main_remove_all">Remove All</string>
    <string name="w_main_feedback_title">Just one second ;)</string>
    <string name="w_main_feedback_text">You\'ve been using ATM for a while.
        \n\nYour feedback is invaluable to improve the app. Would you like to rate the app on Google Play? (It\'s 30 seconds).</string>
    <string name="w_main_feedback_yes">Yes</string>
    <string name="w_main_feedback_done">I\'ve already done it</string>
    <string name="w_main_feedback_done_thanks">Thanks for your rate!</string>
    <string name="w_main_feedback_no">No</string>
    <string name="w_main_feedback_no_remind">You\'ll be reminded in three months.</string>
    <string name="w_main_welcome">Welcome!</string>
    <string name="w_main_hint_title">FYI</string>
    <string name="w_main_hint">Enable and disable parameters shown on the graph by pressing its label.
        \n\nYou can open the Settings panel by clicking the graph.</string>
    <string name="w_main_mp_button_text">Alright</string>
    <string name="w_processes_dead">DEAD</string>
    <string name="w_processes_dead_notification">Process dead</string>
    <string name="w_processes_title">Processes</string>
    <string name="w_processes_empty">Ouch! There was some problem when retrieving the system processes.</string>
    <string name="w_processes_android_51_problem"><big><b>Ouch!</b></big>
		\n\nFor Android 5.1.1+ the processes list doesn\'t work anymore.
		It\'s due to an undocumented Android API change. Still trying to find out some workaround.
		\n\nMore info: http://stackoverflow.com/questions/30619349/android-5-1-1-and-above-getrunningappprocesses-returns-my-application-packag</string>
    <string name="w_processes_first_time">You can remove a process from the list by performing a long click on its label.</string>
    <string name="w_processes_select_some_process">Please select some process(es).</string>
    <string name="menu_record">Record</string>
    <string name="menu_record_description">Starts recording memory and CPU parameters in the background</string>
    <string name="menu_record_stop_description">Stops recording and saves CSV file</string>
    <string name="menu_stop_record">Stop and save</string>
    <string name="menu_settings_description">Opens Settings panel</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_close">Close</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reset">Reset to Defaults</string>
    <string name="graphic_update_interval">Update interval</string>
    <string name="graphic_paused">Graph paused</string>
    <string name="graphic_recording">Recording&#8230;</string>
    <string name="interval_read">Read interval:</string>
    <string name="interval_update">Update interval:</string>
    <string name="interval_width">Graph interval width:</string>
    <string name="tab_main">Main</string>
    <string name="tab_main_text">Set the frequency which memory and CPU parameters are read, the frequency the graph and labels are updated and the graph interval width.
	    \n\nThe update interval must be equal or higher than the read interval. If the read interval is modified the graph will be reset.</string>
    <string name="tab_main_alert_text">The update interval must be equal or higher than the	read interval. Change these intervals or press \'Reset to Defaults\'.</string>
    <string name="tab_main_alert_title">Hey!</string>
    <string name="tab_main_alert_ok">OK</string>
    <string name="tab_show">Show/Record</string>
    <string name="tab_show_text">Select the parameters you want to be shown on the graph.
	    These parameters will be the same that will be recorded when the recording mode is on.
	    \n\nThe generated CSV files are saved on the \'data/data/org.anothermonitor/files\' folder.
	    \n\nYou can also check/uncheck these parameters stright from the main window by pushing on the name of the parameters.</string>
    <string name="tab_show_select_all">Select All</string>
    <string name="tab_show_unselect_all">Unselect All</string>
    <string name="read_interval_text">Read parameters every:</string>
    <string name="read_interval_prompt">Read interval (s):</string>
    <string-array name="read_interval_array">
        <item>0.5 s</item>
        <item>1 s</item>
        <item>2 s</item>
        <item>4 s</item>
    </string-array>
    <string name="macro_menu_dialog_btn1">초기화</string>
    <string name="macro_menu_dialog_btn2">롱탭</string>
    <string name="macro_menu_dialog_btn3">드래그</string>
</resources>