<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBasic"
    tools:context="nts.nt3.atm.MainActivity">

    <TextView
        android:id="@+id/app_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="40dp"
        android:textColor="#ffffff"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/app_name_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:text="@string/home_app_full_title_txt"
        android:layout_below="@+id/app_name_txt"/>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name_txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:background="@drawable/home_btn_shape"
        android:text="@string/home_start_btn"/>

    <Button
        android:id="@+id/performance_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_btn"
        android:background="@drawable/home_btn_shape"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_performance_btn"/>

    <Button
        android:id="@+id/logcat_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/performance_btn"
        android:background="@drawable/home_btn_shape"
        android:textColor="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_logcat_btn"/>

    <Button
        android:id="@+id/app_setting_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logcat_btn"
        android:background="@drawable/home_btn_shape"
        android:textColor="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_app_manager_btn"/>

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_setting_btn"
        android:background="@drawable/home_btn_shape"
        android:textColor="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_setting_btn"/>

    <Button
        android:id="@+id/help_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_btn"
        android:background="@drawable/home_btn_shape"
        android:textColor="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_help_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:text="@string/home_by_made_txt"/>

    <TextView
        android:id="@+id/app_version_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="16dp"
        android:textColor="#ffffff"/>

</RelativeLayout>
