<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff">

    <Button
        android:id="@+id/btn1"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:text="@string/macro_menu_dialog_btn1"
        android:layout_marginTop="15dp"
        android:onClick="buttonPressed"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:text="@string/macro_menu_dialog_btn2"
        android:layout_marginTop="10dp"
        android:onClick="buttonPressed"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:text="@string/macro_menu_dialog_btn3"
        android:layout_marginTop="10dp"
        android:onClick="buttonPressed"
        android:textColor="#000000"/>

</LinearLayout>