<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="nts.nt3.atm.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/back_btn_black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_activity_title_txt"
            android:textSize="18dp"
            android:textColor="#000000" />
    </RelativeLayout>
    <!--구분선-->
    <LinearLayout
        android:id="@+id/divider_lay"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="#ffe0e0e0"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/user_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/setting_activity_user_email_title"/>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:background="#ffe0e0e0"></LinearLayout>
        <RelativeLayout
            android:id="@+id/user_email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/user_email_title">

            <TextView
                android:id="@+id/user_email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:hint="등록된 메일이 없습니다."/>
        </RelativeLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:background="#ffe0e0e0"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:textSize="11dp"
            android:text="@string/setting_activity_user_email_subtext"/>

        <TextView
            android:id="@+id/alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/setting_activity_alarm_title"/>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:background="#ffe0e0e0"></LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:paddingRight="50dp"
                android:text="@string/setting_activity_alarm_ndeploy"/>
            <Switch
                android:id="@+id/ndeploy_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:background="#ffe0e0e0"></LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:text="@string/setting_activity_alarm_crash"/>
            <Switch
                android:id="@+id/crash_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="#ffe0e0e0"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:textSize="11dp"
            android:text="@string/setting_activity_alarm_subtext"/>


        <TextView
            android:id="@+id/capture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/setting_activity_capture_title_txt"/>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:background="#ffe0e0e0"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:paddingRight="50dp"
                android:text="@string/setting_activity_send_capture_without_edit_txt"/>
            <Switch
                android:id="@+id/send_capture_without_edit_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:background="#ffe0e0e0"></LinearLayout>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
